// Vitest Snapshot v1

exports[`<OTUItem /> > should render when [verified=false] 1`] = `
<Styled(BoxLink)
  key="foo"
  to="/refs/baz/otus/foo"
>
  <styled.strong>
    Foo
  </styled.strong>
  <styled.span>
    FB
  </styled.span>
  <Icon
    name="tag"
    tip="This OTU is unverified"
  />
</Styled(BoxLink)>
`;

exports[`<OTUItem /> > should render when [verified=true] 1`] = `
<Styled(BoxLink)
  key="foo"
  to="/refs/baz/otus/foo"
>
  <styled.strong>
    Foo
  </styled.strong>
  <styled.span>
    FB
  </styled.span>
</Styled(BoxLink)>
`;
